--- a/HomeAssignment03/HomeAssignment03.csproj
+++ b/HomeAssignment03/HomeAssignment03.csproj
@@ -90,17 +90,27 @@
     <Compile Include="AdressBook.Designer.cs">
       <DependentUpon>AdressBook.cs</DependentUpon>
     </Compile>
+    <Compile Include="frmAddContact.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmAddContact.Designer.cs">
+      <DependentUpon>frmAddContact.cs</DependentUpon>
+    </Compile>
     <Compile Include="GetAdress.cs">
       <DependentUpon>Database.tt</DependentUpon>
     </Compile>
     <Compile Include="GetPhone.cs">
       <DependentUpon>Database.tt</DependentUpon>
     </Compile>
+    <Compile Include="Person.cs" />
     <Compile Include="PhoneNumber.cs">
       <DependentUpon>Database.tt</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="AdressBook.resx">
+      <DependentUpon>AdressBook.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
