--- a/HomeAssignment03/App.config
+++ b/HomeAssignment03/App.config
@@ -18,6 +18,10 @@
     </providers>
   </entityFramework>
   <connectionStrings>
-    <add name="ContactBookEntities" connectionString="metadata=res://*/Database.csdl|res://*/Database.ssdl|res://*/Database.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(localdb)\MSSQLLocalDB;initial catalog=ContactBook;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="ContactBookEntities" connectionString="metadata=res://*/Database.csdl|res://*/Database.ssdl|res://*/Database.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(localdb)\MSSQLLocalDB;initial catalog=ContactBook;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;"
+      providerName="System.Data.EntityClient" />
+    <add name="HomeAssignment03.Properties.Settings.ContactBookConnectionString"
+      connectionString="Data Source=(localdb)\MSSQLLocalDB;Initial Catalog=ContactBook;Integrated Security=True"
+      providerName="System.Data.SqlClient" />
   </connectionStrings>
 </configuration>
