--- a/HomeAssignment03/HomeAssignment03.csproj
+++ b/HomeAssignment03/HomeAssignment03.csproj
@@ -84,11 +84,11 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>Database.edmx</DependentUpon>
     </Compile>
-    <Compile Include="AdressBook.cs">
+    <Compile Include="AddressBook.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="AdressBook.Designer.cs">
-      <DependentUpon>AdressBook.cs</DependentUpon>
+    <Compile Include="AddressBook.Designer.cs">
+      <DependentUpon>AddressBook.cs</DependentUpon>
     </Compile>
     <Compile Include="frmAddContact.cs">
       <SubType>Form</SubType>
@@ -108,8 +108,11 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <EmbeddedResource Include="AdressBook.resx">
-      <DependentUpon>AdressBook.cs</DependentUpon>
+    <EmbeddedResource Include="AddressBook.resx">
+      <DependentUpon>AddressBook.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frmAddContact.resx">
+      <DependentUpon>frmAddContact.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
