--- a/HomeAssignment03/HomeAssignment03.csproj
+++ b/HomeAssignment03/HomeAssignment03.csproj
@@ -102,12 +102,14 @@
     <Compile Include="GetPhone.cs">
       <DependentUpon>Database.tt</DependentUpon>
     </Compile>
-    <Compile Include="Person.cs" />
     <Compile Include="PhoneNumber.cs">
       <DependentUpon>Database.tt</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="vwGetLatestInsertedContact.cs">
+      <DependentUpon>Database.tt</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="AddressBook.resx">
       <DependentUpon>AddressBook.cs</DependentUpon>
     </EmbeddedResource>
